fixed alignments issues in nav dropdown

--- a/style.css
+++ b/style.css
@@ -21,37 +21,20 @@ border-bottom:3px solid orange;
     color: white;
 }
 nav{
-    position: relative;
     padding: 0 4vw;
 width: 100%;
 height: 12%;
 display: flex;
 justify-content: space-around;
-align-items: center ;
 gap: 15vw;
-z-index: 10;
-}
-#mobile-nav-button{
-    
-    width: 70px;
-    height: 60px;
-    color: black;
-   
-    display: flex;
-    justify-content:center;
-    align-items: center;
-}
-#mobile-nav-button:hover{
-    display: none;
-    border-radius: 50%;
-    background-color:#ebecf0;
+align-items: center;
 }
 #mobile-nav{
     display: none;
     color: #333;
     z-index: 5;
     position: absolute;
-    top: 0%;
+    top: -100%;
     width: 100%;
     background-color: white;
     height: 50%;
@@ -65,6 +48,21 @@ z-index: 10;
     color: #333;
 text-decoration: none;
 padding-bottom: 1vw;
+}
+#mobile-nav-button{
+    
+    width: 70px;
+    height: 60px;
+    color: black;
+   
+    display: none;
+    justify-content:center;
+    align-items: center;
+}
+#mobile-nav-button:hover{
+    display: none;
+    border-radius: 50%;
+    background-color:#ebecf0;
 }
 .small-line{
     width: 112px;
@@ -206,7 +204,7 @@ left: 44%;
     @keyframes fadeRight {
         0% {
           opacity: 0;
-          transform: translateX(70px); 
+          transform: translateX(70px); /* Start position */
         }
         100% {
           opacity: 1;
